// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect <Accordion> to render expanded 1`] = `
<div
  className="gds-accordion custom-class"
  label="Check Me"
  style={
    {
      "width": 140,
    }
  }
>
  <ul
    className="gds-accordion-list"
  >
    <li
      aria-controls="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==6"
      aria-expanded={true}
      aria-pressed={true}
      className="gds-accordion__item gds-accordion__item--active"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <h4
        className="gds-accordion__item-title gds-accordion__item-title--sm"
        id="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==6"
      >
        Accordion Item 1
      </h4>
      <span
        className="gds-accordion__item-icon gds-accordion__item-icon--sm"
      />
      <ul
        aria-hidden={false}
        aria-labelledby="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==6"
        className="gds-accordion__child-items gds-accordion__child-items--sm"
        id="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==6"
        role="region"
      />
    </li>
    <li
      aria-controls="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==7"
      aria-expanded={true}
      aria-pressed={true}
      className="gds-accordion__item gds-accordion__item--active"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <h4
        className="gds-accordion__item-title gds-accordion__item-title--sm"
        id="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==7"
      >
        Accordion Item 2
      </h4>
      <span
        className="gds-accordion__item-icon gds-accordion__item-icon--sm"
      />
      <ul
        aria-hidden={false}
        aria-labelledby="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==7"
        className="gds-accordion__child-items gds-accordion__child-items--sm"
        id="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==7"
        role="region"
      />
    </li>
    <li
      aria-controls="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==8"
      aria-expanded={true}
      aria-pressed={true}
      className="gds-accordion__item gds-accordion__item--active"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <h4
        className="gds-accordion__item-title gds-accordion__item-title--sm"
        id="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==8"
      >
        Accordion Item 3
      </h4>
      <span
        className="gds-accordion__item-icon gds-accordion__item-icon--sm"
      />
      <ul
        aria-hidden={false}
        aria-labelledby="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==8"
        className="gds-accordion__child-items gds-accordion__child-items--sm"
        id="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==8"
        role="region"
      />
    </li>
  </ul>
</div>
`;

exports[`Expect <Accordion> to render locked 1`] = `
<div
  className="gds-accordion"
>
  <ul
    className="gds-accordion-list"
  >
    <li
      aria-controls="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==12"
      className="gds-accordion__item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={-1}
    >
      <h4
        className="gds-accordion__item-title"
        id="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==12"
      >
        Accordion Item 1
      </h4>
      <ul
        aria-hidden={true}
        aria-labelledby="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==12"
        className="gds-accordion__child-items"
        id="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==12"
        role="region"
      />
    </li>
    <li
      aria-controls="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==13"
      className="gds-accordion__item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={-1}
    >
      <h4
        className="gds-accordion__item-title"
        id="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==13"
      >
        Accordion Item 2
      </h4>
      <ul
        aria-hidden={true}
        aria-labelledby="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==13"
        className="gds-accordion__child-items"
        id="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==13"
        role="region"
      />
    </li>
    <li
      aria-controls="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==14"
      className="gds-accordion__item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={-1}
    >
      <h4
        className="gds-accordion__item-title"
        id="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==14"
      >
        Accordion Item 3
      </h4>
      <ul
        aria-hidden={true}
        aria-labelledby="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==14"
        className="gds-accordion__child-items"
        id="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==14"
        role="region"
      />
    </li>
  </ul>
</div>
`;

exports[`Expect <Accordion> to render properly 1`] = `
<div
  className="gds-accordion custom-class"
  label="Check Me"
  style={
    {
      "width": 140,
    }
  }
>
  <ul
    className="gds-accordion-list"
  >
    <li
      aria-controls="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==0"
      className="gds-accordion__item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <h4
        className="gds-accordion__item-title gds-accordion__item-title--sm"
        id="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==0"
      >
        Accordion Item 1
      </h4>
      <span
        className="gds-accordion__item-icon gds-accordion__item-icon--sm"
      />
      <ul
        aria-hidden={true}
        aria-labelledby="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==0"
        className="gds-accordion__child-items gds-accordion__child-items--sm"
        id="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==0"
        role="region"
      />
    </li>
    <li
      aria-controls="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==1"
      className="gds-accordion__item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <h4
        className="gds-accordion__item-title gds-accordion__item-title--sm"
        id="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==1"
      >
        Accordion Item 2
      </h4>
      <span
        className="gds-accordion__item-icon gds-accordion__item-icon--sm"
      />
      <ul
        aria-hidden={true}
        aria-labelledby="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==1"
        className="gds-accordion__child-items gds-accordion__child-items--sm"
        id="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==1"
        role="region"
      />
    </li>
    <li
      aria-controls="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==2"
      className="gds-accordion__item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <h4
        className="gds-accordion__item-title gds-accordion__item-title--sm"
        id="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==2"
      >
        Accordion Item 3
      </h4>
      <span
        className="gds-accordion__item-icon gds-accordion__item-icon--sm"
      />
      <ul
        aria-hidden={true}
        aria-labelledby="AccordionItem-label-QWNjb3JkaW9uSXRlbQ==2"
        className="gds-accordion__child-items gds-accordion__child-items--sm"
        id="AccordionItem-region-QWNjb3JkaW9uSXRlbQ==2"
        role="region"
      />
    </li>
  </ul>
</div>
`;
